@@ -1,9 +1,10 @@
 package com.solvd.pureSelenium.gui.common;
 
-import com.solvd.pureSelenium.gui.utils.ConfigReader;
+import com.zebrunner.carina.utils.R;
+import com.zebrunner.carina.webdriver.decorator.ExtendedWebElement;
 import org.openqa.selenium.TimeoutException;
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebElement;
+import org.openqa.selenium.support.FindBy;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.WebDriverWait;
 import org.slf4j.Logger;
@@ -12,63 +13,54 @@ import org.slf4j.LoggerFactory;
 import java.time.Duration;
 import java.util.List;
 
-public abstract class AbstractPage {
-
-    private final WebDriver driver;
-
-    private final String BASE_URL;
+public abstract class AbstractPage extends com.zebrunner.carina.webdriver.gui.AbstractPage {
 
     public final WebDriverWait wait;
 
     private static final Logger LOGGER = LoggerFactory.getLogger(AbstractPage.class);
 
+    @FindBy(css = "button[data-test='cookiesAcceptMandatoryButton']")
+    private ExtendedWebElement rejectOptionalCookiesButton;
+
+    @FindBy(css = "button[data-test='geolocationPopupStayButton']")
+    private ExtendedWebElement geolocationStayButton;
+
     public AbstractPage(WebDriver driver) {
-        this.driver = driver;
-        this.BASE_URL = ConfigReader.getBaseUrl();
+        super(driver);
         wait = new WebDriverWait(driver, Duration.ofSeconds(15));
     }
 
-    public AbstractPage(WebDriver driver, String pagePath) {
-        this.driver = driver;
-        this.BASE_URL = ConfigReader.getBaseUrl() + pagePath;
-        wait = new WebDriverWait(driver, Duration.ofSeconds(15));
+    protected void clickStayingChosenRegionBtn() {
+        LOGGER.info("Click on \"Stay in chosen region\" button");
+        geolocationStayButton.clickIfPresent();
     }
 
-    public boolean clickIfAppear(WebElement element) {
-        try {
-            wait.until(ExpectedConditions.elementToBeClickable(element)).click();
-            return true;
-        } catch (TimeoutException ignored) {
-            LOGGER.warn("Element is not clickable within the timeout: {}", element);
-            return false;
-        }
+    protected void clickRejectOptionalCookiesBtn() {
+        LOGGER.info("Rejection optional cookies...");
+        rejectOptionalCookiesButton.clickIfPresent();
     }
 
-    public void open() {
-        LOGGER.info("Opening page: {}", BASE_URL);
-        driver.get(BASE_URL);
-    }
-
+    @Override
     public boolean isPageOpened() {
         try {
-            return wait.until(ExpectedConditions.urlContains(BASE_URL));
+            return wait.until(ExpectedConditions.urlContains(getBaseURL()));
         } catch (TimeoutException e) {
             return false;
         }
     }
 
     public void switchToNewestWindow() {
-        List<String> handles = driver.getWindowHandles().stream().toList();
+        List<String> handles = getDriver().getWindowHandles().stream().toList();
         if (!handles.isEmpty()) {
-            driver.switchTo().window(handles.get(handles.size() - 1));
+            getDriver().switchTo().window(handles.getLast());
         }
-    }
-
-    public WebDriver getDriver() {
-        return driver;
     }
 
     public WebDriverWait getWait() {
         return wait;
+    }
+
+    public String getBaseURL() {
+        return R.CONFIG.get("url");
     }
 }
